--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="./index.html" lang="en" class="logo"> WebStudio </a>
         <ul class="site-nav">
           <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
+          <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="#contacts">Контакты</a></li>
         </ul>
       </nav>
