делает разметку для Портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,67 +23,113 @@
     <!--Контент страницы-->
     <main>
       <!--Виды работ-->
+      <h1 hidden>Портфолио</h1>
       <section>
-          <ul>
-            <li><button type="button">Все</button></li>
-            <li><button type="button">Веб-сайты</button></li>
-            <li><button type="button">Приложения</button></li>
-            <li><button type="button">Дизайн</button></li>
-            <li><button type="button">Маркетинг</button></li> 
-         </ul>
+        <h2 hidden>Виды работ</h2>
+        <ul>
+          <li><button type="button">Все</button></li>
+          <li><button type="button">Веб-сайты</button></li>
+          <li><button type="button">Приложения</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
+        </ul>
       </section>
       <section>
-          <h1 hidden>Портфолио</h1>
-          <ul>
-              <li>
-                  <img src="./img/portfolio/tehnokryak.jpg" alt="Наша команда" width="370" height="294">
-                  <h2>Технокряк</h2>
-                  <p>Веб-сайт</p>
-              </li>
-              <li>
-                  <img src="./img/portfolio/new-orlean-vs-golden-star.jpg" alt="Баскетболисты" width="370" height="294">
-                  <h2>Постер<span lang="en"> New Orlean vs Golden Star</span></h2>
-                  <p>Дизайн</p>
-              </li>
-              <li>
-                  <img src="./img/portfolio/seafood.jpg" alt="Логотип и рыба" width="370" height="294">
-                  <h2>Ресторан <span lang="en">Seafood</span></h2>
-                  <p>Приложение</p>
-              </li>
-              <li>
-                  <img src="./img/portfolio/prime.jpg" alt="Наушники" width="370" height="294">
-                  <h2>Проект <span lang="en">Prime</span></h2>
-                  <p>Маркетинг</p>
-              </li>
-              <li>
-                  <img src="./img/portfolio/boxes.jpg" alt="Коробки" width="370" height="294">
-                  <h2>Проект <span lang="en">Boxes</span></h2>
-                  <p>Приложение</p>
-              </li>
-              <li>
-                  <img src="./img/portfolio/inspiration-has-no-borders.jpg" alt="Монитор" width="370" height="294">
-                  <h2 lang="en">Inspiration has no Borders</h2>
-                  <p>Веб-сайт</p>
-              </li>
-              <li>
-                  <img src="./img/portfolio/limited-edition.jpg" alt="Книга" width="370" height="294">
-                  <h2>Издание <span lang="en">Limited Edition</span></h2>
-                  <p>Дизайн</p>
-              </li>
-              <li>
-                  <img src="./img/portfolio/lab.jpg" alt="Этикетка" width="370" height="294">
-                  <h2>Проект <span lang="en">LAB</span></h2>
-                  <p>Маркетинг</p>
-              </li>
-              <li>
-                  <img src="./img/portfolio/growing-business.jpg" alt="Ноутбук" width="370" height="294">
-                  <h2 lang="en">Growing Business</h2>
-                  <p>Приложение</p>
-              </li>
-              
-          </ul>
+        <h2 hidden>Портфолио</h2>
+        <ul>
+          <li>
+            <img
+              src="./img/portfolio/tehnokryak.jpg"
+              alt="Наша команда"
+              width="370"
+              height="294"
+            />
+            <h3>Технокряк</h3>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="./img/portfolio/new-orlean-vs-golden-star.jpg"
+              alt="Баскетболисты"
+              width="370"
+              height="294"
+            />
+            <h3>Постер<span lang="en"> New Orlean vs Golden Star</span></h3>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img
+              src="./img/portfolio/seafood.jpg"
+              alt="Логотип и рыба"
+              width="370"
+              height="294"
+            />
+            <h3>Ресторан <span lang="en">Seafood</span></h3>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img
+              src="./img/portfolio/prime.jpg"
+              alt="Наушники"
+              width="370"
+              height="294"
+            />
+            <h3>Проект <span lang="en">Prime</span></h3>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img
+              src="./img/portfolio/boxes.jpg"
+              alt="Коробки"
+              width="370"
+              height="294"
+            />
+            <h3>Проект <span lang="en">Boxes</span></h3>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img
+              src="./img/portfolio/inspiration-has-no-borders.jpg"
+              alt="Монитор"
+              width="370"
+              height="294"
+            />
+            <h3 lang="en">Inspiration has no Borders</h3>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="./img/portfolio/limited-edition.jpg"
+              alt="Книга"
+              width="370"
+              height="294"
+            />
+            <h3>Издание <span lang="en">Limited Edition</span></h3>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img
+              src="./img/portfolio/lab.jpg"
+              alt="Этикетка"
+              width="370"
+              height="294"
+            />
+            <h3>Проект <span lang="en">LAB</span></h3>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img
+              src="./img/portfolio/growing-business.jpg"
+              alt="Ноутбук"
+              width="370"
+              height="294"
+            />
+            <h3 lang="en">Growing Business</h3>
+            <p>Приложение</p>
+          </li>
+        </ul>
       </section>
-
+    </main>
     <!--Подвал-->
     <footer id="contacts">
       <a href="./portfolio.html" lang="en"> WebStudio </a>
