направляет на главную страницу

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <!--Шапка сайта-->
     <header>
       <nav>
-        <a href="./portfolio.html" lang="en"> WebStudio </a>
+        <a href="./index.html" lang="en"> WebStudio </a>
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -132,7 +132,7 @@
     </main>
     <!--Подвал-->
     <footer id="contacts">
-      <a href="./portfolio.html" lang="en"> WebStudio </a>
+      <a href="./index.html" lang="en"> WebStudio </a>
       <address>
         <ul>
           <li>
