--- a/index.html
+++ b/index.html
@@ -4,62 +4,70 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Шапка сайта-->
     <header class="page-header">
       <nav>
-        <a href="./index.html" lang="en" class="logo"> WebStudio </a>
-        <ul class="site-nav">
-          <li><a href="">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="#contacts">Контакты</a></li>
+        <a href="./index.html" lang="en" class="logo"
+          ><span>Web</span><span class="logo-header">Studio</span></a
+        >
+        <ul class="site-nav list">
+          <li><a href="" class="link current">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="#contacts" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <div class="header-contact">
+        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+        <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+      </div>
     </header>
     <!--Контент страницы-->
     <main>
       <!--Герой-->
-      <section>
+      <section class="hero">
         <div>
-          <h1>
+          <h1 class="hero-title">
             Эффективные решения <br />
             для вашего бизнеса
           </h1>
-          <button type="button">Заказать услугу</button>
+          <button type="button" class="studio-button">Заказать услугу</button>
         </div>
       </section>
       <!--Принципы работы-->
-      <section>
+      <section class="section">
         <h2 hidden>Наши принципы работы</h2>
-        <ul>
+        <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="item-title">Внимание к деталям</h3>
+            <p class="item-description">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="item-title">Пунктуальность</h3>
+            <p class="item-description">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="item-title">Планирование</h3>
+            <p class="item-description">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="item-title">Современные технологии</h3>
+            <p class="item-description">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -67,9 +75,9 @@
         </ul>
       </section>
       <!--Наша деятельность-->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <img
               src="img/about/img1.jpg"
@@ -97,67 +105,80 @@
         </ul>
       </section>
       <!--Команда-->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <section class="section team">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="list card">
+          <li class="team-item">
             <img
               src="./img/team/igor.jpg"
               alt="Игорь Демьяненко"
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="team-member">Игорь Демьяненко</h3>
+            <p lang="en" class="team-position">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./img/team/olga.jpg"
               alt="Ольга Репина"
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="team-member">Ольга Репина</h3>
+            <p lang="en" class="team-position">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./img/team/nikolai.jpg"
               alt="Николай Тарасов"
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="team-member">Николай Тарасов</h3>
+            <p lang="en" class="team-position">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./img/team/mihail.jpg"
               alt="Михаил Ермаков"
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="team-member">Михаил Ермаков</h3>
+            <p lang="en" class="team-position">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Подвал-->
-    <footer id="contacts">
-      <a href="./index.html" lang="en"> WebStudio </a>
+    <footer id="contacts" class="page-footer">
+      <a href="./index.html" lang="en" class="logo"
+        ><span>Web</span><span class="logo-footer">Studio</span></a
+      >
       <address>
-        <ul>
+        <ul class="list">
           <li>
             <a
               href="https://goo.gl/maps/CxbSxKR86c5XLmLp6"
               target="_blank"
               rel="noopener noreferer"
+              class="address-footer link link-footer"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li>
+            <a
+              href="mailto:info@example.com"
+              class="contact-footer link link-footer"
+              >info@example.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380991111111" class="contact-footer link link-footer"
+              >+38 099 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
