--- a/portfolio.html
+++ b/portfolio.html
@@ -4,39 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Шапка сайта-->
-    <header>
+    <header class="page-header">
       <nav>
-        <a href="./index.html" lang="en"> WebStudio </a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="#contacts">Контакты</a></li>
+        <a href="./index.html" lang="en" class="logo"
+          ><span>Web</span><span class="logo-header">Studio</span></a
+        >
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+          <li><a href="#contacts" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <div class="header-contact">
+        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+        <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+      </div>
     </header>
     <!--Контент страницы-->
     <main>
-      <!--Виды работ-->
+      <!--Портфолио-->
       <h1 hidden>Портфолио</h1>
-      <section>
+      <!--кнопки-->
+      <section class="section">
         <h2 hidden>Виды работ</h2>
-        <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+        <ul class="list">
+          <li><button type="button" class="portfolio-button">Все</button></li>
+          <li>
+            <button type="button" class="portfolio-button">Веб-сайты</button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-button">Приложения</button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-button">Дизайн</button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-button">Маркетинг</button>
+          </li>
         </ul>
       </section>
-      <section>
-        <h2 hidden>Портфолио</h2>
-        <ul>
+      <!--наши работы-->
+      <section class="section">
+        <h2 hidden>Карточки</h2>
+        <ul class="list card">
           <li>
             <img
               src="./img/portfolio/tehnokryak.jpg"
@@ -44,8 +62,8 @@
               width="370"
               height="294"
             />
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
+            <h3 class="work-item">Технокряк</h3>
+            <p class="item-type">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -54,8 +72,12 @@
               width="370"
               height="294"
             />
-            <h3>Постер<span lang="en"> New Orlean vs Golden Star</span></h3>
-            <p>Дизайн</p>
+            <h3 class="work-item">
+              Постер<span lang="en" class="section-item">
+                New Orlean vs Golden Star</span
+              >
+            </h3>
+            <p class="item-type">Дизайн</p>
           </li>
           <li>
             <img
@@ -64,8 +86,10 @@
               width="370"
               height="294"
             />
-            <h3>Ресторан <span lang="en">Seafood</span></h3>
-            <p>Приложение</p>
+            <h3 class="work-item">
+              Ресторан <span lang="en" class="section-item">Seafood</span>
+            </h3>
+            <p class="item-type">Приложение</p>
           </li>
           <li>
             <img
@@ -74,8 +98,10 @@
               width="370"
               height="294"
             />
-            <h3>Проект <span lang="en">Prime</span></h3>
-            <p>Маркетинг</p>
+            <h3 class="work-item">
+              Проект <span lang="en" class="section-item">Prime</span>
+            </h3>
+            <p class="item-type">Маркетинг</p>
           </li>
           <li>
             <img
@@ -84,8 +110,10 @@
               width="370"
               height="294"
             />
-            <h3>Проект <span lang="en">Boxes</span></h3>
-            <p>Приложение</p>
+            <h3 class="work-item">
+              Проект <span lang="en" class="section-item">Boxes</span>
+            </h3>
+            <p class="item-type">Приложение</p>
           </li>
           <li>
             <img
@@ -94,8 +122,8 @@
               width="370"
               height="294"
             />
-            <h3 lang="en">Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+            <h3 lang="en" class="work-item">Inspiration has no Borders</h3>
+            <p class="item-type">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -104,8 +132,11 @@
               width="370"
               height="294"
             />
-            <h3>Издание <span lang="en">Limited Edition</span></h3>
-            <p>Дизайн</p>
+            <h3 class="work-item">
+              Издание
+              <span lang="en" class="section-item">Limited Edition</span>
+            </h3>
+            <p class="item-type">Дизайн</p>
           </li>
           <li>
             <img
@@ -114,8 +145,10 @@
               width="370"
               height="294"
             />
-            <h3>Проект <span lang="en">LAB</span></h3>
-            <p>Маркетинг</p>
+            <h3 class="work-item">
+              Проект <span lang="en" class="section-item">LAB</span>
+            </h3>
+            <p class="item-type">Маркетинг</p>
           </li>
           <li>
             <img
@@ -124,27 +157,40 @@
               width="370"
               height="294"
             />
-            <h3 lang="en">Growing Business</h3>
-            <p>Приложение</p>
+            <h3 lang="en" class="work-item">Growing Business</h3>
+            <p class="item-type">Приложение</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Подвал-->
-    <footer id="contacts">
-      <a href="./index.html" lang="en"> WebStudio </a>
+    <footer id="contacts" class="page-footer">
+      <a href="./index.html" lang="en" class="logo"
+        ><span>Web</span><span class="logo-footer">Studio</span></a
+      >
       <address>
-        <ul>
+        <ul class="list">
           <li>
             <a
               href="https://goo.gl/maps/CxbSxKR86c5XLmLp6"
               target="_blank"
               rel="noopener noreferer"
+              class="address-footer link link-footer"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li>
+            <a
+              href="mailto:info@example.com"
+              class="contact-footer link link-footer"
+              >info@example.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380991111111" class="contact-footer link link-footer"
+              >+38 099 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
