--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <!--Нормализатор-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
       rel="stylesheet"
@@ -15,7 +20,7 @@
     <header class="page-header">
       <nav>
         <a href="./index.html" lang="en" class="logo"
-          ><span>Web</span><span class="logo-header">Studio</span></a
+          >Web<span class="logo-header">Studio</span></a
         >
         <ul class="site-nav list">
           <li><a href="" class="link current">Студия</a></li>
@@ -41,7 +46,7 @@
         </div>
       </section>
       <!--Принципы работы-->
-      <section class="section">
+      <section>
         <h2 hidden>Наши принципы работы</h2>
         <ul class="list">
           <li>
@@ -75,7 +80,7 @@
         </ul>
       </section>
       <!--Наша деятельность-->
-      <section class="section">
+      <section>
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="list">
           <li>
@@ -108,45 +113,45 @@
       <section class="section team">
         <h2 class="section-title">Наша команда</h2>
         <ul class="list card">
-          <li class="team-item">
+          <li>
             <img
               src="./img/team/igor.jpg"
               alt="Игорь Демьяненко"
               width="270"
               height="260"
             />
-            <h3 class="team-member">Игорь Демьяненко</h3>
-            <p lang="en" class="team-position">Product Designer</p>
+            <h3 class="team-item member">Игорь Демьяненко</h3>
+            <p lang="en" class="team-item position">Product Designer</p>
           </li>
-          <li class="team-item">
+          <li>
             <img
               src="./img/team/olga.jpg"
               alt="Ольга Репина"
               width="270"
               height="260"
             />
-            <h3 class="team-member">Ольга Репина</h3>
-            <p lang="en" class="team-position">Frontend Developer</p>
+            <h3 class="team-item member">Ольга Репина</h3>
+            <p lang="en" class="team-item position">Frontend Developer</p>
           </li>
-          <li class="team-item">
+          <li>
             <img
               src="./img/team/nikolai.jpg"
               alt="Николай Тарасов"
               width="270"
               height="260"
             />
-            <h3 class="team-member">Николай Тарасов</h3>
-            <p lang="en" class="team-position">Marketing</p>
+            <h3 class="team-item member">Николай Тарасов</h3>
+            <p lang="en" class="team-item position">Marketing</p>
           </li>
-          <li class="team-item">
+          <li>
             <img
               src="./img/team/mihail.jpg"
               alt="Михаил Ермаков"
               width="270"
               height="260"
             />
-            <h3 class="team-member">Михаил Ермаков</h3>
-            <p lang="en" class="team-position">UI Designer</p>
+            <h3 class="team-item member">Михаил Ермаков</h3>
+            <p lang="en" class="team-item position">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -154,7 +159,7 @@
     <!--Подвал-->
     <footer id="contacts" class="page-footer">
       <a href="./index.html" lang="en" class="logo"
-        ><span>Web</span><span class="logo-footer">Studio</span></a
+        >Web<span class="logo-footer">Studio</span></a
       >
       <address>
         <ul class="list">
