--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <!--Нормализатор-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
       rel="stylesheet"
@@ -31,10 +36,9 @@
     <!--Контент страницы-->
     <main>
       <!--Портфолио-->
-      <h1 hidden>Портфолио</h1>
-      <!--кнопки-->
       <section class="section">
-        <h2 hidden>Виды работ</h2>
+        <h1 hidden>Наши работы</h1>
+        <!--Клавиши-->
         <ul class="list">
           <li><button type="button" class="portfolio-button">Все</button></li>
           <li>
@@ -50,115 +54,130 @@
             <button type="button" class="portfolio-button">Маркетинг</button>
           </li>
         </ul>
-      </section>
-      <!--наши работы-->
-      <section class="section">
-        <h2 hidden>Карточки</h2>
+        <!--Карточки-->
         <ul class="list card">
           <li>
-            <img
-              src="./img/portfolio/tehnokryak.jpg"
-              alt="Наша команда"
-              width="370"
-              height="294"
-            />
-            <h3 class="work-item">Технокряк</h3>
-            <p class="item-type">Веб-сайт</p>
+            <a href="" class="work-card">
+              <img
+                src="./img/portfolio/tehnokryak.jpg"
+                alt="Наша команда"
+                width="370"
+                height="294"
+              />
+              <h2 class="work-item">Технокряк</h2>
+              <p class="item-type">Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/portfolio/new-orlean-vs-golden-star.jpg"
-              alt="Баскетболисты"
-              width="370"
-              height="294"
-            />
-            <h3 class="work-item">
-              Постер<span lang="en" class="section-item">
-                New Orlean vs Golden Star</span
-              >
-            </h3>
-            <p class="item-type">Дизайн</p>
+            <a href="" class="work-card">
+              <img
+                src="./img/portfolio/new-orlean-vs-golden-star.jpg"
+                alt="Баскетболисты"
+                width="370"
+                height="294"
+              />
+              <h2 class="work-item">
+                Постер<span lang="en" class="section-item">
+                  New Orlean vs Golden Star</span
+                >
+              </h2>
+              <p class="item-type">Дизайн</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/portfolio/seafood.jpg"
-              alt="Логотип и рыба"
-              width="370"
-              height="294"
-            />
-            <h3 class="work-item">
-              Ресторан <span lang="en" class="section-item">Seafood</span>
-            </h3>
-            <p class="item-type">Приложение</p>
+            <a href="" class="work-card">
+              <img
+                src="./img/portfolio/seafood.jpg"
+                alt="Логотип и рыба"
+                width="370"
+                height="294"
+              />
+              <h2 class="work-item">
+                Ресторан <span lang="en" class="section-item">Seafood</span>
+              </h2>
+              <p class="item-type">Приложение</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/portfolio/prime.jpg"
-              alt="Наушники"
-              width="370"
-              height="294"
-            />
-            <h3 class="work-item">
-              Проект <span lang="en" class="section-item">Prime</span>
-            </h3>
-            <p class="item-type">Маркетинг</p>
+            <a href="" class="work-card">
+              <img
+                src="./img/portfolio/prime.jpg"
+                alt="Наушники"
+                width="370"
+                height="294"
+              />
+              <h2 class="work-item">
+                Проект <span lang="en" class="section-item">Prime</span>
+              </h2>
+              <p class="item-type">Маркетинг</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/portfolio/boxes.jpg"
-              alt="Коробки"
-              width="370"
-              height="294"
-            />
-            <h3 class="work-item">
-              Проект <span lang="en" class="section-item">Boxes</span>
-            </h3>
-            <p class="item-type">Приложение</p>
+            <a href="" class="work-card">
+              <img
+                src="./img/portfolio/boxes.jpg"
+                alt="Коробки"
+                width="370"
+                height="294"
+              />
+              <h2 class="work-item">
+                Проект <span lang="en" class="section-item">Boxes</span>
+              </h2>
+              <p class="item-type">Приложение</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/portfolio/inspiration-has-no-borders.jpg"
-              alt="Монитор"
-              width="370"
-              height="294"
-            />
-            <h3 lang="en" class="work-item">Inspiration has no Borders</h3>
-            <p class="item-type">Веб-сайт</p>
+            <a href="" class="work-card">
+              <img
+                src="./img/portfolio/inspiration-has-no-borders.jpg"
+                alt="Монитор"
+                width="370"
+                height="294"
+              />
+              <h2 lang="en" class="work-item">Inspiration has no Borders</h2>
+              <p class="item-type">Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/portfolio/limited-edition.jpg"
-              alt="Книга"
-              width="370"
-              height="294"
-            />
-            <h3 class="work-item">
-              Издание
-              <span lang="en" class="section-item">Limited Edition</span>
-            </h3>
-            <p class="item-type">Дизайн</p>
+            <a href="" class="work-card">
+              <img
+                src="./img/portfolio/limited-edition.jpg"
+                alt="Книга"
+                width="370"
+                height="294"
+              />
+              <h2 class="work-item">
+                Издание
+                <span lang="en" class="section-item">Limited Edition</span>
+              </h2>
+              <p class="item-type">Дизайн</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/portfolio/lab.jpg"
-              alt="Этикетка"
-              width="370"
-              height="294"
-            />
-            <h3 class="work-item">
-              Проект <span lang="en" class="section-item">LAB</span>
-            </h3>
-            <p class="item-type">Маркетинг</p>
+            <a href="" class="work-card">
+              <img
+                src="./img/portfolio/lab.jpg"
+                alt="Этикетка"
+                width="370"
+                height="294"
+              />
+              <h2 class="work-item">
+                Проект <span lang="en" class="section-item">LAB</span>
+              </h2>
+              <p class="item-type">Маркетинг</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/portfolio/growing-business.jpg"
-              alt="Ноутбук"
-              width="370"
-              height="294"
-            />
-            <h3 lang="en" class="work-item">Growing Business</h3>
-            <p class="item-type">Приложение</p>
+            <a href="" class="work-card">
+              <img
+                src="./img/portfolio/growing-business.jpg"
+                alt="Ноутбук"
+                width="370"
+                height="294"
+              />
+              <h2 lang="en" class="work-item">Growing Business</h2>
+              <p class="item-type">Приложение</p>
+            </a>
           </li>
         </ul>
       </section>
@@ -166,7 +185,7 @@
     <!--Подвал-->
     <footer id="contacts" class="page-footer">
       <a href="./index.html" lang="en" class="logo"
-        ><span>Web</span><span class="logo-footer">Studio</span></a
+        >Web<span class="logo-footer">Studio</span></a
       >
       <address>
         <ul class="list">
